--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.Rhistory filter=lfs diff=lfs merge=lfs -text
+*.RData filter=lfs diff=lfs merge=lfs -text
